--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "@pulumi/azure-native": "^2.83.0",
         "@pulumi/pulumi": "^3.144.0",
-        "pulumi-ts-provider": "https://gitpkg.vercel.app/mikhailshilkov/comp-as-comp/ts/pulumi-ts-provider?main"
+        "pulumi-ts-provider": "https://gitpkg.vercel.app/mikhailshilkov/comp-as-comp/ts/pulumi-ts-provider?20621b672151ec13b7c384d570e713f765cc83ca"
     },
     "devDependencies": {
         "@types/node": "^10.0.0",
